--- a/style.css
+++ b/style.css
@@ -13,9 +13,7 @@
 .bg-page {
     background-color: #eb8124;
     height: 110vh;
-    /* 80% of the viewport height */
     border-radius: 3vw;
-    /* 3% of the viewport width */
 }
 
 
@@ -27,20 +25,29 @@
     border-radius: 3vw;
 }
 
+.a-nav1 {
+    font-size: 2vw;
+}
+
+.a-nav {
+    font-size: 1.3vw !important;
+}
+
 .my-nav {
     margin: 1.5vw;
 }
 
 .p-btn {
     margin-left: 2.5vw;
-    /* 30px converted to vw */
     width: 10vw;
-    /* 160px converted to vw */
+    font-size: 1.5vw;
     height: 7.8vh;
-    /* 50px converted to vh */
     border-radius: 10vw;
-    /* 40px converted to vw */
     background: none;
+}
+
+.p-btn:hover {
+    background: linear-gradient(to right, #f7d6badd, #eb8124);
 }
 
 .main-h {
@@ -48,23 +55,24 @@
     font-weight: 700;
     line-height: 1;
     margin-left: 3vw;
-
 }
 
 .paratha-des {
     margin-left: 3vw;
-    font-size: 1.5vw;
+    font-size: 1.1vw;
     margin-top: 1vh;
 }
 
 .dish-img {
-    height: 400px;
+    width: 35vw;
+    height:30vw ;
     text-align: center;
 }
 
 .o-btn {
     margin-left: 3vw;
     width: 8vw;
+    font-size: 1.3vw;
     height: 7vh;
     border-radius: 40px;
     background: linear-gradient(to right, #f7d6badd, #eb8124);
@@ -77,8 +85,8 @@
 
 .p1-btn {
     margin-top: 1vw;
-
     margin-left: 3vw;
+    font-size: 1vw;
     width: 8vw;
     height: 7vh;
     border-radius: 40px;
@@ -93,6 +101,7 @@
 .p2-btn {
     margin-top: 2vw;
     width: 8vw;
+    font-size: 1vw;
     height: 7vh;
     border-radius: 40px;
     background: none;
@@ -103,74 +112,168 @@
 
 }
 
-@media (max-width:900px) {
-    .o-btn {
-        margin-left: 3vw;
-        width: 18vw;
-        height: 7vh;
-        border-radius: 40px;
-        background: linear-gradient(to right, #f7d6badd, #eb8124);
-    }
+.p3-btn{
+    width: 8vw;
+    height: 7vh;
+    font-size: 1vw;
+    border-radius: 40px;
+    background: none;
+
+}
+
+.p3-btn:hover{
+    background: linear-gradient(to right, #f7d6badd, #eb8124);
+
+}
 
 
-    .p1-btn {
-        margin-left: 3vw;
-        width: 18vw;
-        height: 7vh;
-        border-radius: 40px;
-        background: none;
-    }
+@media (max-width:1024px) {
 
-
-    .p2-btn {
-        margin-top: 2px;
-        width: 18vw;
-        height: 7vh;
-        border-radius: 40px;
-        background: none;
-    }
 
     .bg-page {
-        background-color: #eb8124;
-        height: 155vh;
-        /* 80% of the viewport height */
-        border-radius: 3vw;
-        /* 3% of the viewport width */
+        height: 150vh;
     }
-
 
     .pastery {
-        background: linear-gradient(to right, #fafafa 0%, #f7d6badd 80%, #f3e8e7 100%);
-        height: 145vh;
-        margin: 2vw !important;
-        width: 90vw !important;
-        border-radius: 3vw;
+        height: 140vh;
+        width: 93vw !important;
+
     }
 
 
-    .dish-img {
-        margin-top: 10vh;
-        height: 60vw;
-        text-align: center;
+    .a-nav1 {
+        font-size: 2.5vw;
     }
 
     .a-nav {
-        display: none;
+        font-size: 1.7vw !important;
+    }
+
+    .p-btn {
+        width: 12vw;
+        font-size: 1.5vw;
+        height: 7vh;
     }
 
     .main-h {
-        font-size: 8vw;
-        font-weight: 700;
-        line-height: 1;
-        margin-left: 3vw;
-
+        font-size: 3.7vw;
+        margin-left: 1vw;
     }
 
     .paratha-des {
-        margin-left: 3vw;
-        font-size: 2.5vw;
-        margin-top: 1vh;
+        margin-left: 1vw;
+        font-size: 1.6vw;
     }
+
+    .dish-img {
+        width: 45vw;
+        height:40vw ;
+        text-align: center;
+    }
+    
+
+    .o-btn {
+        margin-left: 1vw;
+        width: 9vw;
+        font-size: 1.5vw;
+        height: 6vh;
+    }
+
+    .p1-btn {
+        margin-left: 1vw;
+        width: 9vw;
+        font-size: 1.3vw;
+        height: 6vh;
+    }
+
+    .p2-btn {     
+         margin-left: 1vw;
+        width: 11vw;
+        font-size: 1.3vw;
+        height: 6vh;
+    }
+
+
+    .p3-btn{
+        margin-left: 1vw;
+        width: 11vw;
+        font-size: 1.3vw;
+        height: 6vh;
+    }
+    
+
+}
+
+@media (max-width:500px) {
+
+
+    .bg-page {
+        height: 120vh;
+    }
+
+    .pastery {
+        height: 110vh;
+        width: 93vw !important;
+
+    }
+
+    .a-nav1 {
+        font-size: 3.3vw;
+    }
+    .a-nav {
+        font-size: 3vw !important;
+    }
+    .p-btn {
+        width: 13vw;
+        font-size: 1.9vw;
+        height: 4vh;
+    }
+    .main-h {
+        font-size: 5.7vw;
+        margin-left: 0vw;
+    }
+    .paratha-des {
+        margin-left: 1vw;
+        font-size: 2.5vw;
+    }
+ 
+ 
+    .dish-img {
+        width: 55vw;
+        height:50vw ;
+        text-align: center;
+    }
+
+
+    .o-btn {
+        margin-left: 0vw;
+        width: 14vw;
+        font-size: 2.3vw;
+        height: 5vh;
+    }
+    .p1-btn {
+        margin-left: 0vw;
+        width: 15vw;
+        font-size: 2.2vw;
+        height: 6vh;
+    }
+
+    .p2-btn {       
+         margin-left: 0vw;
+        width: 15vw;
+        font-size: 2.2vw;
+        height: 6vh;
+    }
+
+    
+    .p3-btn{         
+        margin-left: 0vw;
+        width: 15vw;
+        font-size: 2.2vw;
+        height: 6vh;
+    }
+
+    
 
 
 }
